# TENET

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/hieromem/: __init__.py
src/tenet/: __init__.py  core.py  demo.py  embedder.py  models.py  retriever.py  store.py
src/tenet/agent/: __init__.py  brain.py  loop.py  proposal.py
src/tenet/approver/: __init__.py  cli.py  failsafe.py  protocol.py  scripted.py
src/tenet/events/: __init__.py  envelope.py  log.py  replay.py  taxonomy.py
src/tenet/executor/: __init__.py  fs_tools.py  registry.py
src/tenet/gate/: __init__.py  contract.py
src/tenet/memory/: __init__.py  contextstore.py  contextualizer.py  core.py  embedder.py  models.py  rawstore.py  retriever.py
src/tenet/scope/: __init__.py  grant.py
tests/: test_agent_loop.py  test_event_log.py  test_executor.py  test_gate.py  test_memory_core.py  test_scope.py
