[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenet"
version = "0.1.0"
description = "A scope-aware semantic memory layer for AI agents — the foundation for a governance gate and secure action agent."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Slice 1 (memory core) needs only numpy. Everything heavier is opt-in below,
# added when a measured need justifies it — not up front.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Real semantic embeddings. Heavy (pulls in torch); only installed when you
# actually swap HashingEmbedder -> SentenceTransformerEmbedder.
embeddings = [
    "sentence-transformers>=2.5",
]
# Production store path: Postgres + pgvector (a later slice).
postgres = [
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.2.5",
]
# HTTP surface (a later slice).
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
# Test + tooling deps.
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tenet"]

[tool.pytest.ini_options]
# src layout: make `import tenet` resolve without an install step.
pythonpath = ["src"]
testpaths = ["tests"]
